namespace DriverAndVehicleLicenseDepartment;

public class LicenseIssuances {}