namespace DriverAndVehicleLicenseDepartment;

public class Licenses {}